# djangotutorial

./: .gitignore  Makefile  README.md  pyproject.toml
django_tutorial/: settings.py  urls.py
django_tutorial/polls/: admin.py  apps.py  urls.py  views.py
django_tutorial/polls/migrations/: 0001_initial.py
django_tutorial/polls/templates/polls/: detail.html  index.html
djangotutorial/: settings.py
