[tool.poetry]
name = "django_tutorial"
version = "0.0.0"
description = "A simple app in Django"
authors = ["Lachlan Marnham"]
maintainers = ["Lachlan Marnham"]
license = "MIT"
repository="git@github.com:LachlanMarnham/djangotutorial.git"
homepage="https://github.com/LachlanMarnham/djangotutorial"

[tool.poetry.dependencies]
python = "~3.9"

# third party
django = "~4.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0"
flake8-commas = "^2.1"
flake8-isort = "^4.1"
flake8-quotes = "^3.3"
isort = "^5.10"
pytest = "^7.1"
pytest-cov = "^3.0"
pytest-env = "^0.6"
pytest-random-order = "^1.0"
bump2version = "^0.5"
changelog-gen = "~0.8.0"
django-extensions = "^3.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
